--- a/Redo Management/SubmissionPage.xaml
+++ b/Redo Management/SubmissionPage.xaml
@@ -8,23 +8,53 @@
         <views:HeaderView Grid.Row="0"/>
         <views:FooterView Grid.Row="2"/>
 
-        <Border Stroke="Black" StrokeThickness="3" Margin="50">
+        <Border 
+            Grid.Row="1"
+            Stroke="Black" 
+            StrokeThickness="3" 
+            Margin="20">
             <Border.StrokeShape>
                 <RoundRectangle CornerRadius="8"/>
             </Border.StrokeShape>
+            
             <!-- Submission Grid -->
-            <Grid Grid.Row="1" RowDefinitions="*, *, *, 320, *" Padding="20">
-                <Button Text="User Name" Grid.Row="0" Margin="10"/>
-                <Button Text="Time of Submission" Grid.Row="1" Margin="10"/>
-                <Picker Title="Choose Department" ItemsSource="{Binding DepartmentOptions}" 
-                        Grid.Row="2" Margin="10"/>
-                <Border Stroke="Black" StrokeThickness="2" Margin="10" Grid.Row="3">
+            <Grid 
+                RowDefinitions="Auto, Auto, Auto, *, Auto, Auto" 
+                Padding="20">
+                <Button 
+                    Text="User Name" 
+                    Grid.Row="0" 
+                    Margin="5"/>
+                <Button 
+                    Text="Time of Submission" 
+                    Grid.Row="1" 
+                    Margin="5"/>
+                <Picker 
+                    Title="Choose Department" 
+                    ItemsSource="{Binding Departments}" 
+                    SelectedItem="{Binding SelectedDepartment}"
+                    ItemDisplayBinding="{Binding Name}"
+                    Grid.Row="2" 
+                    Margin="5"/>
+                <Border 
+                    Stroke="Black" 
+                    StrokeThickness="2" 
+                    Margin="5"
+                    Grid.Row="3">
                     <Border.StrokeShape>
                         <RoundRectangle CornerRadius="8"/>
                     </Border.StrokeShape>
-                    <Label Text="Notes" Margin="10"/>
+                    <Editor 
+                        Placeholder="Notes"
+                        PlaceholderColor="DarkSlateGray"
+                        MaxLength="1000"
+                        Margin="5"/>
                 </Border>
-                <Border Stroke="Black" StrokeThickness="2" Margin="10" Grid.Row="4">
+                <Border 
+                    Stroke="Black" 
+                    StrokeThickness="2" 
+                    Margin="5" 
+                    Grid.Row="4">
                     <Border.StrokeShape>
                         <RoundRectangle CornerRadius="8"/>
                     </Border.StrokeShape>
@@ -34,12 +64,27 @@
                             <ColumnDefinition Width="2"/>
                             <ColumnDefinition Width="6*"/>
                         </Grid.ColumnDefinitions>
-                        <Image Source="google_sheets_logo.svg" Grid.Column="0" 
-                            HeightRequest="30" WidthRequest="30"/>
-                        <Label Grid.Column="1" BackgroundColor="black"/>
-                        <Label Grid.Column="2" Text="Google Sheets Name" Margin="10"/>
+                        <Image 
+                            Source="google_sheets_logo.svg" 
+                            Grid.Column="0" 
+                            HeightRequest="30" 
+                            WidthRequest="30"/>
+                        <Label 
+                            Grid.Column="1" 
+                            BackgroundColor="black"/>
+                        <Label 
+                            Grid.Column="2" 
+                            Text="Google Sheets Name" 
+                            Margin="10"/>
                     </Grid>
                 </Border>
+                <Button
+                    Text="Submit"
+                    Grid.Row="5"
+                    Margin="5"
+                    FontAttributes="Bold"
+                    FontSize="Medium"
+                />
             </Grid>
         </Border>
     </Grid>
